微信小程序端

--- a/weixin/pages/index/index.wxss
+++ b/weixin/pages/index/index.wxss
@@ -1,21 +1,15 @@
 /**index.wxss**/
-.userinfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+
+.swiper{
+  border-bottom: 1px solid green;
+  padding: 5px;
 }
 
-.userinfo-avatar {
-  width: 128rpx;
-  height: 128rpx;
-  margin: 20rpx;
-  border-radius: 50%;
+swiper{
+  height:120px;
 }
 
-.userinfo-nickname {
-  color: #aaa;
-}
-
-.usermotto {
-  margin-top: 200px;
+.item_image image{
+  width: 100%;
+  height: 120px;
 }
