--- a/weixin/pages/index/index.wxml
+++ b/weixin/pages/index/index.wxml
@@ -1,9 +1,18 @@
-<swiper indicator-dots='{{indicatorDots}}' autoplay='{{autoplay}}' interval='{{interval}}' duration='{{duration}}' circular='{{circular}}'>
-  <block wx:for='{{imageUrls}}'>
-    <swiper-item>
-      <navigator url='/pages/view0/view0'>
-        <image src='{{item.images.large}}'></image>
-      </navigator>
-    </swiper-item>
-  </block>
+<!--
+   indicator-dots='true' 是否显示指示点  默认 false
+   indicator-color:指示点颜色
+   indicator-active-color:选中的指示点颜色
+   autoplay：是否自动切换  默认：false
+   interval:自动切换时间间隔
+   duration：滑动动画时长
+   vertical  是否改成纵向， 默认  false
+ -->
+
+<swiper indicator-dots='true' indicator-color='gray' indicator-active-color='green' autoplay='true' interval='5000' duration='500'>
+    <block wx:for="{{imgUrl}}" wx:key="key">
+      <swiper-item class="item_image">
+          <image src='{{item}}' class='swiper_image' mode="aspectFill"></image>
+      </swiper-item>
+    </block>
+
 </swiper>
